# ErrorDashboardServer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Shuttle.toml
client/: .gitignore  Cargo.toml  README.md  index.css  index.html
client/.github/workflows/: main.yml
client/src/: app.rs  main.rs  routes.rs
client/src/components/: mod.rs
client/src/configs/: mod.rs
client/src/forms/: login.rs  mod.rs  namespace.rs  registration.rs
client/src/hooks/: mod.rs  use_form.rs  use_mutation.rs  use_query.rs
client/src/views/: mod.rs
client/src/views/dashboard/: dashboard_page.rs  mod.rs
client/src/views/home/: home_page.rs
client/src/views/login/: login_page.rs  mod.rs
client/src/views/register/: mod.rs  registration_page.rs
server/: .gitignore  Cargo.toml  errors.rs  mod.rs  namespaces.rs  prelude.rs  refresh_tokens.rs  user_namespace_junction.rs  users.rs
server/migration/src/: lib.rs  m20230914_054832_create_user_table.rs  m20230921_034443_create_refresh_token_table.rs  m20231013_164343_create_error_table.rs  m20231013_200027_create_namespace_table.rs  m20231015_093305_create_user_namespace_junction_table.rs  m20240616_024612_create_error_tags.rs  m20240622_185137_create_user_profile.rs  m20240916_025827_create_namespace_alerts.rs  m20240924_003716_create_namespace_alert_junction.rs  m20241122_093812_add_namespace_alert_index.rs  m20241122_093930_add_error_index.rs  m20241122_224628_add_namespace_alert_junction_index.rs  m20241127_012219_create_notification.rs  m20241129_233747_add_notification_index.rs  m20250120_050231_create_feature_request_table.rs  m20250201_063512_create_bug_reporting.rs  m20250216_024615_update_namespace_alert_with_discord_id.rs  m20250219_225925_update_discord_id_string.rs  m20250220_221738_add_alert_sent_col.rs  m20250227_040239_add_phone_number_and_provider.rs
server/src/: main.rs
server/src/config/: mod.rs
server/src/database/: mod.rs
server/src/dtos/: mod.rs  user_dtos.rs
server/src/handlers/: admin_handlers.rs  auth_handlers.rs  bug_report_handlers.rs  error_handlers.rs  feature_request_handlers.rs  mod.rs  namespace_alert_handlers.rs  namespace_handlers.rs  notification_handlers.rs  tag_handlers.rs  user_handlers.rs  ws_handlers.rs
server/src/libs/: oauth_client.rs
server/src/managers/: mod.rs  namespace_manager.rs  notification_manager.rs
server/src/middlewares/: auth_middleware.rs  mod.rs  rate_limit_middleware.rs  sdk_auth_middleware.rs
server/src/models/: bug_report_model.rs  error_model.rs  error_tag_model.rs  feature_request_model.rs  mod.rs  namespace_alert_user_junction_model.rs  namespace_alerts_model.rs  namespace_model.rs  notification_model.rs  refresh_token_model.rs  user_model.rs  user_namespace_junction_model.rs  user_profile_model.rs
server/src/routes/: admin_routes.rs  auth_routes.rs  bug_report_routes.rs  error_routes.rs  feature_request_routes.rs  mod.rs  namespace_alert_routes.rs  namespace_routes.rs  notification_routes.rs  static_routes.rs  tag_routes.rs  user_routes.rs  ws_routes.rs
server/src/services/: auth_services.rs  bug_report_services.rs  error_services.rs  feature_request_services.rs  mod.rs  namespace_alerts_services.rs  namespace_services.rs  notification_services.rs  tag_services.rs  user_services.rs
server/src/shared/utils/: discord.rs  errors.rs  jwt.rs  mailing.rs  (+5 more)
shared_types/: Cargo.toml
shared_types/src/: auth_dtos.rs  bug_report_dtos.rs  error_dtos.rs  extra_dtos.rs  feature_request_dtos.rs  lib.rs  messages.rs  namespace_alert_dtos.rs  namespace_dtos.rs  notification_dtos.rs  tag_dtos.rs  user_dtos.rs
(+10 files in other folders)
