[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_types = { path = "../shared_types" }
anyhow = "1.0.75"
dotenv = "0.15"
log = "0.4.6"
gloo = "0.3"
gloo-net = "0.4.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
stylist = { version = "0.12.1", features = ["yew_integration"] }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
yew_icons = { version = "0.7.2", features = [ "HeroiconsSolidHome", "BootstrapDoorClosedFill", "BootstrapDoorOpenFill", "FontAwesomeSolidJoint" , "HeroiconsSolidClipboardDocumentCheck", "HeroiconsSolidQueueList", "LucideLayoutDashboard", "LucideMenu"]}
serde_valid = "0.21.0"

[[bin]]
name = "app"
path = "src/main.rs"
