[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_types = { path = "../shared_types" }

actix-web = "4"
actix = "0.11.0"
actix-rt = "2.2"
actix-service = "2.0.2"
anyhow = "1.0.75"
bcrypt = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-chrono", "macros"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
